--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cypress/commit-info",
   "description": "Collects Git commit info from CI or from CLI",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "bugs": "https://github.com/cypress-io/commit-info/issues",
   "config": {
@@ -60,21 +60,38 @@
     "secure": "nsp check",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
-    "unit": "mocha src/*-spec.js"
+    "unit": "mocha src/*-spec.js",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "release": {
-    "analyzeCommits": "simple-commit-message"
+    "analyzeCommits": "simple-commit-message",
+    "generateNotes": "github-post-release",
+    "verifyRelease": {
+      "path": "dont-crack",
+      "test-against": []
+    }
   },
   "devDependencies": {
     "ban-sensitive-files": "1.9.0",
     "dependency-check": "2.9.1",
     "deps-ok": "1.2.1",
+    "dont-crack": "1.2.1",
     "git-issues": "1.3.1",
+    "github-post-release": "1.13.1",
     "license-checker": "15.0.0",
     "mocha": "4.0.1",
     "nsp": "2.8.1",
     "pre-git": "3.15.3",
     "prettier-standard": "7.0.3",
+    "semantic-release": "8.2.0",
+    "simple-commit-message": "3.3.2",
     "standard": "10.0.3"
+  },
+  "dependencies": {
+    "chdir-promise": "0.6.2",
+    "check-more-types": "2.24.0",
+    "debug": "3.1.0",
+    "execa": "0.8.0",
+    "lazy-ass": "1.6.0"
   }
 }
