--- a/package.json
+++ b/package.json
@@ -83,9 +83,11 @@
     "nsp": "2.8.1",
     "pre-git": "3.15.3",
     "prettier-standard": "7.0.3",
+    "ramda": "0.25.0",
     "semantic-release": "8.2.0",
     "simple-commit-message": "3.3.2",
-    "standard": "10.0.3"
+    "standard": "10.0.3",
+    "stub-spawn-once": "2.3.0"
   },
   "dependencies": {
     "chdir-promise": "0.6.2",
