--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ node_js:
   - '8'
 before_script:
   - npm prune
+script:
+  - git version
+  # git branch
+  - git rev-parse --abbrev-ref HEAD
+  - npm test
 after_success:
   - npm run semantic-release
 branches:
