--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "github-post-release": "1.13.1",
     "license-checker": "20.2.0",
     "mocha": "5.2.0",
+    "mocked-env": "1.2.3",
     "nsp": "2.8.1",
     "pre-git": "3.17.1",
     "prettier-standard": "8.0.1",
