chore: fix lock

--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm ci --frozen-lockfile
+      - run: npm ci
       - run: npm test
   release:
     runs-on: ubuntu-latest
