--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,7 +1,7 @@
-name: Test and Release (on master)
+name: Test and Release (if master)
 on: push
 jobs:
-  test:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -11,13 +11,5 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm test
-  release:
-    runs-on: ubuntu-latest
-    needs: test
-    # if: github.ref == 'refs/heads/master'
-    steps:
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Release @cypress/commit-info
-        run: npm run semantic-release -- --dry-run
+      # - if: github.ref == 'refs/heads/master'
+      - run: npm run semantic-release -- --dry-run
