--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,4 +12,4 @@ jobs:
       - run: npm ci
       - run: npm test
       # - if: github.ref == 'refs/heads/master'
-      - run: npm run semantic-release -- --dry-run
+        # run: npm run semantic-release
