--- a/package.json
+++ b/package.json
@@ -39,8 +39,7 @@
     "pretty": "prettier-standard 'src/*.js'",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
-    "unit": "mocha src/*-spec.js",
-    "semantic-release": "semantic-release pre && npm publish --access public && semantic-release post"
+    "unit": "mocha src/*-spec.js"
   },
   "devDependencies": {
     "ban-sensitive-files": "1.10.0",
@@ -52,7 +51,7 @@
     "mocha": "6.2.1",
     "mocked-env": "1.3.1",
     "prettier-standard": "8.0.1",
-    "semantic-release": "17.2.3",
+    "semantic-release": "24.2.7",
     "snap-shot-it": "7.9.3",
     "standard": "13.1.0",
     "stub-spawn-once": "2.3.0"
