--- a/package.json
+++ b/package.json
@@ -33,27 +33,27 @@
     "deps": "deps-ok && dependency-check --no-dev .",
     "issues": "git-issues",
     "license": "license-checker --production --onlyunknown --csv",
-    "lint": "standard --verbose --fix src/*.js",
-    "prelint": "npm run pretty",
+    "lint": "eslint",
     "pretest": "npm run lint",
-    "pretty": "prettier-standard 'src/*.js'",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
     "unit": "mocha src/*-spec.js"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "5.3.1",
     "ban-sensitive-files": "1.10.0",
     "chdir-promise": "0.6.2",
     "dependency-check": "4.1.0",
     "deps-ok": "1.4.1",
+    "eslint": "9.34.0",
+    "eslint-plugin-mocha": "11.1.0",
     "git-issues": "1.3.1",
+    "globals": "16.3.0",
     "license-checker": "25.0.1",
     "mocha": "6.2.1",
     "mocked-env": "1.3.1",
-    "prettier-standard": "8.0.1",
     "semantic-release": "24.2.7",
     "snap-shot-it": "7.9.3",
-    "standard": "13.1.0",
     "stub-spawn-once": "2.3.0"
   },
   "dependencies": {
