--- a/package.json
+++ b/package.json
@@ -29,10 +29,7 @@
     "url": "https://github.com/cypress-io/commit-info.git"
   },
   "scripts": {
-    "ban": "ban",
-    "deps": "deps-ok && dependency-check --no-dev .",
-    "issues": "git-issues",
-    "license": "license-checker --production --onlyunknown --csv",
+    "deps": "dependency-check --no-dev .",
     "lint": "eslint",
     "pretest": "npm run lint",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
@@ -41,15 +38,11 @@
   },
   "devDependencies": {
     "@stylistic/eslint-plugin": "5.3.1",
-    "ban-sensitive-files": "1.10.0",
     "chdir-promise": "0.6.2",
     "dependency-check": "4.1.0",
-    "deps-ok": "1.4.1",
     "eslint": "9.34.0",
     "eslint-plugin-mocha": "11.1.0",
-    "git-issues": "1.3.1",
     "globals": "16.3.0",
-    "license-checker": "25.0.1",
     "mocha": "6.2.1",
     "mocked-env": "1.3.1",
     "semantic-release": "24.2.7",
